responsive menu with burger implementation

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,19 @@
   </head>
   <body>
     <div class="main">
-      <div class="emoji mb-6">💣🤯💥</div>
-      <button class="button">Boom?</button>
+      <div class="toolbar">
+        <div class="navbar-burger"><span style="font-size: 1.5rem">H</span></div>
+        <div class="navbar-menu">
+          <ul style="font-size: 1.5rem">
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">Contacts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
